--- a/devsuparent/devsudominio/cuentadevsu/src/main/resources/application.properties
+++ b/devsuparent/devsudominio/cuentadevsu/src/main/resources/application.properties
@@ -25,7 +25,7 @@ spring.cloud.config.import=optional:configserver
 spring.cloud.config.import-check.enabled=false
 spring.cloud.config.enabled=false
 #EUREKA CONFIG
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
 # PERSONAL
